# atools

./: .gitignore  LICENSE  README.md  about.html  amusic.html  apic.html  aria2.html  arrjson.json  arrother.json  arrxpath.json  book.html  components.d.ts  index.html  music.html  package-lock.json  package.json  paste.html  player.html  pot.html  setting.html  translate.html  tsconfig.json  vite.config.js  vite.config.ts  xiaoji.py
src/: App.vue  App2.vue  about.js  main.js  main.ts  styles.css  translate.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: aria2.conf
src-tauri/capabilities/: main.json
src-tauri/capabilities-back/: base.json
src-tauri/src/: aria.rs  clipboard.rs  config.rs  db.rs  dir.rs  fs.rs  helper.rs  hotkey.rs  lib.rs  log4rs.yaml  log_init.rs  main.rs  ocr.rs  screenshot.rs  tray.rs  window.rs
src/abook/: App.vue  book.js
src/abook/assets/: 69.json  ai.json  fanqie.json  shareBookSource.json  vista.json  vistaDic.json  vistaDicIteam.json  yueyou.json
src/abook/components/: VideoPlayer.vue
src/abook/core/: common.js  openRead.js  openReadCss.js
src/abook/model/: sourceIteam.js
src/amusic/: App.vue  main.js
src/assets/: config.json
src/components/: Greet.vue  Home.vue  Layout.vue  LeftMenu.vue  Person.vue  Person2.vue  Person3.vue  Test.vue
src/core/: atools.js  commander.js  ctx.js  db.js  imgTools.js  lifecycle.js  lifecyclePlugins.js  pluginHandle.js  pluginHandler.js  pluginLoader.js  request.js  upload.js  use.js
src/hls/: his.js  merge.js
src/model/: Iteam.js
src/paste/: App.vue  main.js  main.ts
src/pot/: App.vue
src/pot/i18n/: index.ts
src/router/: actions.js  router.js  router.ts  window.js
src/settings/: App.vue  main.js
src/shortcut/: global.js  global.ts
src/template/: App.vue
src/test/: 123.html  deel.js  main.html  pan.js  soup.py  temp.js  test.js  testjson.js
src/translate/: Home.vue
src/utils/: 5sing.js  ctx.js  decode.cjs  dir.js  fs.js  input.js  nya.js  plugin.js  plugin_info.js  qq.cjs  qq.js  reflect.js  sixyin-music-source-v1.1.0.js  translate.js  uploader.js
src/views/: About.vue  Aside.vue  BookList.vue  Home.vue  Main.vue  Music.vue  Pic.vue  Plugin.vue  Plugins.vue  Ranking.vue  Search.vue  Settings.vue  Temp.vue  Test.vue  Tools.vue  Upload.vue
src/window/: handle.js  handle.ts
(+29 files in other folders)
