[package]
name = "atools"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all", "system-tray"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-context-menu = { git = "https://github.com/c2r0b/tauri-plugin-context-menu", branch = "main" }
tauri-plugin-clipboard =  "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { "version" = "1.35.1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
log4rs = "1.1.1"
open = "5.0.0"
auto-launch = "0.5"
sdl2 = "0.36.0"
xcap = "0.0.3"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
window-shadows = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
